<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AuctionDetail" >

    <ImageView android:id="@+id/imgGoods" 
    android:src="@drawable/goods2"
    android:contentDescription="@string/image_note"
    android:scaleType="centerInside"
    android:layout_width="300sp"
    android:layout_height="300sp"
    android:layout_centerHorizontal="true" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goods_text" 
        android:id="@+id/goodsDesc" 
        android:layout_below="@+id/imgGoods"
        />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_price" 
        android:id="@+id/currentPrice" 
        android:layout_below="@+id/goodsDesc" />

    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_price" 
        android:id="@+id/basePrice" 
        android:layout_below="@+id/currentPrice" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jt_price" 
        android:id="@+id/jtPrice" 
        android:layout_below="@+id/basePrice" />
    
    
         
<Button   
    android:id="@+id/autoBids"  
    android:text="@string/autobid_text"  
    android:layout_width="wrap_content"  
    android:layout_height="wrap_content"
    android:layout_below="@+id/jtPrice"    /> 
    
<Button   
    android:id="@+id/bidByHands"  
    android:text="@string/bid_text"  
    android:layout_width="wrap_content"  
    android:layout_height="wrap_content" 
      android:layout_below="@+id/autoBids"
 />  
    
    <EditText  
    android:id="@+id/bidPrice"    
    android:layout_width="180sp"   
    android:layout_height="wrap_content" 
    android:hint="@string/bidprice_text" 
     android:layout_toRightOf="@+id/bidByHands"
    android:layout_alignBottom="@+id/bidByHands" 
    android:inputType="numberDecimal"
     /> 
     

    
</RelativeLayout>
